[gd_scene load_steps=10 format=3 uid="uid://dcj3uqddsqr6p"]

[ext_resource type="Shader" path="res://shaders/sprite_outline.gdshader" id="1_76ikj"]
[ext_resource type="Script" path="res://scenes/casesimulator/Case.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bhun2avo3exu5" path="res://assets/bag_ui/gift.png" id="2_ytp13"]
[ext_resource type="FontFile" uid="uid://cf7ocurslf3ii" path="res://assets/font/VonwaonBitmap-12px.ttf" id="3_x3w4r"]
[ext_resource type="Texture2D" uid="uid://47ru5i5x08qa" path="res://assets/button_background_new.png" id="5_aooal"]
[ext_resource type="Texture2D" uid="uid://qjiywcfu6gin" path="res://assets/button_background_new2.png" id="6_6mwfn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_augcy"]
shader = ExtResource("1_76ikj")
shader_parameter/outline_width = 0.0
shader_parameter/outline_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6yqw3"]
texture = ExtResource("5_aooal")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ejod1"]
texture = ExtResource("6_6mwfn")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0

[node name="Case" type="TextureButton"]
material = SubResource("ShaderMaterial_augcy")
anchors_preset = -1
anchor_right = 0.242188
anchor_bottom = 0.345
offset_bottom = -24.0
texture_normal = ExtResource("2_ytp13")
stretch_mode = 5
script = ExtResource("2")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_top = 2.0
offset_right = 48.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_fonts/font = ExtResource("3_x3w4r")
theme_override_font_sizes/font_size = 48
text = "抽奖"
horizontal_alignment = 1
vertical_alignment = 1

[node name="tip" type="Label" parent="."]
visible = false
z_index = 99
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 183.0
offset_top = -22.2
offset_right = 497.0
offset_bottom = 131.8
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_6yqw3")
text = "花费1000金币抽一次奖？"
autowrap_mode = 1

[node name="confirm" type="Button" parent="tip"]
layout_mode = 0
offset_left = 37.0
offset_top = 150.0
offset_right = 149.0
offset_bottom = 237.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxTexture_ejod1")
theme_override_styles/hover = SubResource("StyleBoxTexture_6yqw3")
theme_override_styles/pressed = SubResource("StyleBoxTexture_6yqw3")
theme_override_styles/normal = SubResource("StyleBoxTexture_6yqw3")
text = "确认"

[node name="cancel" type="Button" parent="tip"]
layout_mode = 0
offset_left = 166.0
offset_top = 150.0
offset_right = 278.0
offset_bottom = 237.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxTexture_ejod1")
theme_override_styles/hover = SubResource("StyleBoxTexture_6yqw3")
theme_override_styles/pressed = SubResource("StyleBoxTexture_6yqw3")
theme_override_styles/normal = SubResource("StyleBoxTexture_6yqw3")
text = "取消"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="pressed" from="tip/confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="tip/cancel" to="." method="_on_cancel_pressed"]
